--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,8 +14,8 @@
     {% if site.author.github %}
       <li><a href="http://github.com/{{ site.author.github }}"><i class="fab fa-github" aria-hidden="true"></i> GitHub</a></li>
     {% endif %}
-    {% if site.author.bitbucket %}
-      <li><a href="http://bitbucket.org/{{ site.author.bitbucket }}"><i class="fab fa-bitbucket" aria-hidden="true"></i> Bitbucket</a></li>
+    {% if site.author.linkedin %}
+      <li><a href="http://linkedin.com/{{ site.author.linkedin }}"><i class="fab fa-linkedin" aria-hidden="true"></i> Linkedin</a></li>
     {% endif %}
   </ul>
 </div>
