--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -50,7 +50,7 @@
         <li><a href="https://plus.google.com/+{{ author.google_plus }}"><i class="fab fa-google-plus" aria-hidden="true"></i> Google+</a></li>
       {% endif %}
       {% if author.quora %}
-        <li><a href="https://www.quora.com/{{ author.quora}}"><i class="fab fa-quora" aria-hidden="true"></i> Quora</a></li>
+        <li><a href="{{ author.quora}}"><i class="fab fa-quora" aria-hidden="true"></i> Quora</a></li>
       {% endif %}
       {% if author.linkedin %}
         <li><a href="https://www.linkedin.com/in/{{ author.linkedin }}"><i class="fab fa-linkedin" aria-hidden="true"></i> LinkedIn</a></li>
